testsuite/tests/parser/should_fail/T12045d.stderr

T12045d.hs:11:16: error:
    Unexpected kind application in a data/newtype declaration:
      MkD @Nat Bool
